Creado mediante Colaboratory

--- a/FIA2023_TPI_GALIAN.ipynb
+++ b/FIA2023_TPI_GALIAN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNiEZBYX67Ru7nmUwf1gBKy",
+      "authorship_tag": "ABX9TyMfMP2kX6+a2o2EOUrYEt3l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -934,10 +934,301 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Instalamos las librerias necesarias"
+      ],
+      "metadata": {
+        "id": "EZz7FdXwq6_p"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "install.packages('neuralnet')\n",
+        "install.packages('NeuralNetTools')\n",
+        "install.packages('ggplot2')\n",
+        "install.packages('gridExtra')\n",
+        "install.packages(\"randomForest\")\n",
+        "install.packages('e1071')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P3RvEOu-oeeq",
+        "outputId": "7c144e81-fb8e-43be-a4f8-41cebfa9c462"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "also installing the dependency ‘reshape2’\n",
+            "\n",
+            "\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "also installing the dependency ‘proxy’\n",
+            "\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Importamos las librerias"
+      ],
+      "metadata": {
+        "id": "Y9zphMb2q40Z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "library('neuralnet')\n",
+        "library('NeuralNetTools')\n",
+        "library('ggplot2')\n",
+        "library('gridExtra')\n",
+        "library('e1071')\n",
+        "library('randomForest')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KlISZjxXo1el",
+        "outputId": "585f48b4-521c-44c3-98b2-cc7ea8e0266f"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n",
+            "Attaching package: ‘neuralnet’\n",
+            "\n",
+            "\n",
+            "The following object is masked from ‘package:dplyr’:\n",
+            "\n",
+            "    compute\n",
+            "\n",
+            "\n",
+            "\n",
+            "Attaching package: ‘gridExtra’\n",
+            "\n",
+            "\n",
+            "The following object is masked from ‘package:dplyr’:\n",
+            "\n",
+            "    combine\n",
+            "\n",
+            "\n",
+            "randomForest 4.7-1.1\n",
+            "\n",
+            "Type rfNews() to see new features/changes/bug fixes.\n",
+            "\n",
+            "\n",
+            "Attaching package: ‘randomForest’\n",
+            "\n",
+            "\n",
+            "The following object is masked from ‘package:gridExtra’:\n",
+            "\n",
+            "    combine\n",
+            "\n",
+            "\n",
+            "The following object is masked from ‘package:ggplot2’:\n",
+            "\n",
+            "    margin\n",
+            "\n",
+            "\n",
+            "The following object is masked from ‘package:dplyr’:\n",
+            "\n",
+            "    combine\n",
+            "\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "P3RvEOu-oeeq"
+        "id": "OxcmjRMfo2EB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# *TPS ANTERIORES PARA GUIARME*"
+      ],
+      "metadata": {
+        "id": "vqCeNEWIqWSP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TP2 - Creacion de diagonal\n",
+        "\n",
+        "\n",
+        "\n",
+        "```\n",
+        "\n",
+        "indices<-c(1:800)\n",
+        "modelosRF<-list()\n",
+        "ErroresCRF<-array()\n",
+        "prediccionesRF<-list()\n",
+        "\n",
+        "for (i in 1:100) {\n",
+        "diagonal_test<-diagonal[indice_test[[i]],]\n",
+        "diagonal_train<-diagonal[indice_train[[i]],]\n",
+        "\n",
+        "\n",
+        "  library(\"randomForest\")\n",
+        "  modelosRF[[i]]<-randomForest(diagonal_train[,-3], as.factor(diagonal_train[,3]),diagonal_test[,-3],as.factor(diagonal_test[,3]), norm.votes=FALSE,ntree=1000)\n",
+        "  prediccionesRF[[i]] <- modelosRF[[i]]$test$predicted\n",
+        "\n",
+        "  # ENTRENAMIENTO\n",
+        "\tErroresCRF[i]<-sum(prediccionesRF[[i]] != diagonal_test[,3])/length(diagonal_test[,3])\n",
+        "}\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "_uPTfrBapm2F"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TP3 - SVM\n",
+        "\n",
+        "\n",
+        "```\n",
+        "# Especifica el número de veces que deseas ejecutar el script\n",
+        "\n",
+        "num_ejecuciones <- 100\n",
+        "VectorError<-array()\n",
+        "VectorAcierto<-array()\n",
+        "Listapred<-list()\n",
+        "Listamod<-list()\n",
+        "\n",
+        "load(\"G:\\\\Mi unidad\\\\FACULTAD\\\\Fundamentos de IA\\\\Diagonal.Rdata\")\n",
+        "load(\"G:\\\\Mi unidad\\\\FACULTAD\\\\Fundamentos de IA\\\\Indices_test.Rdata\")\n",
+        "load(\"G:\\\\Mi unidad\\\\FACULTAD\\\\Fundamentos de IA\\\\Indices_train.Rdata\")\n",
+        "\n",
+        "# Inicia un bucle for para ejecutar el script 100 veces\n",
+        "\n",
+        "for (i in 1:num_ejecuciones) {\n",
+        "\n",
+        "#CREACION DE INDICES\n",
+        "indices<-c(1:800)\n",
+        "indice_test1<-sample(c(1:400),200)\n",
+        "indice_test0<-sample(c(401:800),200)\n",
+        "\n",
+        "indice_test<-c(indice_test1,indice_test0)\n",
+        "indice_train<-indices[-indice_test]\n",
+        "diagonal_test<-diagonal [indice_test,]\n",
+        "diagonal_train<-diagonal [indice_train,]\n",
+        "dim(diagonal_test)\n",
+        "dim(diagonal_train)\n",
+        "\n",
+        "#ENTRENAMIENTO\n",
+        "library(e1071)\n",
+        "#DUDA MOD\n",
+        "Listamod<-svm(diagonal_train[,-3],diagonal_train[,3],type=\"C\")\n",
+        "Listapred<-predict(modelo,diagonal_test[,-3])\n",
+        "\n",
+        "#CALCULO DE ERROR y ACIERTO\n",
+        "VectorError[i]<-sum(Listapred!= diagonal_test [,3])/length(diagonal_test[-3])\n",
+        "VectorError[i]\n",
+        "VectorAcierto[i]<- 1-ErrorC\n",
+        "VectorAcierto[i]\n",
+        "\n",
+        "\n",
+        "cat(\"Ejecución número:\", i, \"\\n\")\n",
+        "}\n",
+        "save(Listapred,file=\"predicciones.Rdata\")\n",
+        "save(VectorError,file=\"erroresC.Rdata\")\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Vehtcu9cph-l"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TP4 - RF\n",
+        "\n",
+        "\n",
+        "```\n",
+        "load('/content/Diagonal.Rdata')\n",
+        "load('/content/Indices_test.Rdata')\n",
+        "load('/content/Indices_train.Rdata')\n",
+        "load('/content/errorC.Rdata')\n",
+        "\n",
+        "#Creamos las estructuras de datos que vamos a necesitar\n",
+        "\n",
+        "indices<-c(1:800)\n",
+        "modelosRF<-list()\n",
+        "ErroresCRF<-array()\n",
+        "prediccionesRF<-list()\n",
+        "\n",
+        "for (i in 1:100){\n",
+        "diagonal_test<-diagonal[indices_test[[i]],]\n",
+        "diagonal_train<-diagonal[indices_train[[i]],]\n",
+        "#hold out 50% para test 50% para train\n",
+        "modelosRF[[i]]<-randomForest(diagonal_train[,-3], as.factor(diagonal_train[,3]),diagonal_test[,-3],as.factor(diagonal_test[,3]), norm.votes=FALSE,ntree=1000)\n",
+        "prediccionesRF[[i]]<-modelosRF[[i]]$test$predicted\n",
+        "#Entrenamiento\n",
+        "ErroresCRF[i]<-sum(prediccionesRF[[i]] != diagonal_test[,3])/length(diagonal_test[,3])\n",
+        "#calculamos el error\n",
+        "}\n",
+        "\n",
+        "# Agrega estos comandos de impresión para depurar\n",
+        "print(dim(diagonal_train))\n",
+        "print(dim(diagonal_test))\n",
+        "print(head(diagonal_train))\n",
+        "print(head(diagonal_test))\n",
+        "\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "J3j1XXZUp3Jh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "AV-yrKIhqHcf"
       },
       "execution_count": null,
       "outputs": []
