Creado mediante Colaboratory

--- a/FIA2023_TPI_GALIAN.ipynb
+++ b/FIA2023_TPI_GALIAN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM524j/M9f+exIxqjJss9h7",
+      "authorship_tag": "ABX9TyPPHLMPKsf4XROeuT5AOKF8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "u6_84yFnOhKH",
         "colab": {
@@ -80,7 +80,7 @@
       "metadata": {
         "id": "KU1M7ll6O0En"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -111,12 +111,11 @@
       "metadata": {
         "id": "mcdmu5vsO0I2",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "bc06d05a-3ead-4cfd-9871-976f1f5b502d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -175,13 +174,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "hbMJF9Dfgk0M",
         "outputId": "616b79d9-d382-435d-872d-bf66817db31b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -228,13 +226,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "otTNjQ0VgraE",
         "outputId": "49a04dcc-ee26-489a-d183-4ddefd402730"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -298,7 +295,7 @@
         "id": "txoJGFwOhClR",
         "outputId": "764bf84f-6f1f-4423-d21f-8d9d77694663"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,13 +336,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "nJEQVYmXg7d0",
         "outputId": "0a40ef61-4285-41a1-fc2e-d544779fe7ea"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -404,13 +400,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Deup-QmzhMIk",
         "outputId": "b631791c-2973-4f08-a949-48b923e97af2"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -450,13 +445,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "BlqzSinAhOXQ",
         "outputId": "5dffac4b-1464-49bc-e5b0-1ea615e6653e"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -520,7 +514,7 @@
         "id": "1JuNK9bOhPrY",
         "outputId": "1539af2b-ff59-4ae5-efe1-555e8e2b1c9a"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,13 +581,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "yJzSxywLij7F",
         "outputId": "b5488840-5535-4610-d4ba-6525b286860d"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -630,7 +623,7 @@
       "metadata": {
         "id": "Sb2mHOK9l6RG"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -654,7 +647,7 @@
         "id": "PLCNttOgmFle",
         "outputId": "8d80fba4-52b8-49ff-94f3-010394630350"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -679,7 +672,7 @@
         "id": "217lqswGmCgN",
         "outputId": "04a12e9a-49b7-47a2-b9ac-d48dff09ac47"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -721,13 +714,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "eAAiBlkOl-i8",
         "outputId": "0bd6e6f5-291f-4273-bf18-b9351c7db1d2"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -784,7 +776,7 @@
         "id": "sMykaPr0mpQ-",
         "outputId": "09227888-9530-4f57-db5b-627301aeb563"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -823,13 +815,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "LKECyAmynFuq",
         "outputId": "07f488be-7bc2-42b4-bd5b-6226af4ae092"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -851,13 +842,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "6R2bE7_1nyeK",
         "outputId": "dfad4151-8a4e-4c8b-bb2b-5d9305a7bca7"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -888,13 +878,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "RMDdr0gun6OF",
         "outputId": "712ca2df-60d6-475e-b484-4a0b86a62683"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -921,7 +910,7 @@
       "metadata": {
         "id": "vCiL3fHRoMvi"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -960,7 +949,7 @@
         "id": "P3RvEOu-oeeq",
         "outputId": "7c144e81-fb8e-43be-a4f8-41cebfa9c462"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1016,7 +1005,7 @@
       "metadata": {
         "id": "KlISZjxXo1el"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1075,7 +1064,7 @@
       "metadata": {
         "id": "uLEAUBEdvuWj"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1091,7 +1080,7 @@
         "id": "VKHlwucw2qFs",
         "outputId": "70ed9137-f6a3-4e02-c8e5-d304d369304f"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1156,7 +1145,7 @@
         "id": "XmKQas212ri0",
         "outputId": "84e408ae-54e1-4de3-8f78-4780a5d4b4ed"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1230,7 +1219,7 @@
         "id": "GUdF7OK_0hxx",
         "outputId": "d847eb7b-9df7-4cd9-aa5d-f31bd731fa50"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1280,7 +1269,7 @@
         "id": "TJaLL7GT0rrY",
         "outputId": "b852200b-9975-4153-e63e-b1b51eb57338"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1311,7 +1300,7 @@
         "id": "6o-uZJFd1Xic",
         "outputId": "3481b3f7-ff41-4760-aa9b-decf8e52ad84"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1363,7 +1352,7 @@
         "id": "w78HntLy1aao",
         "outputId": "78ffa056-1c96-47e3-bcd2-8cbb1514ddcf"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1427,7 +1416,7 @@
       "metadata": {
         "id": "i-I1rRODuC1T"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1452,7 +1441,7 @@
         "id": "RigHDlXr2don",
         "outputId": "30fe83cd-81ae-4842-baa7-cc9611758398"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1517,7 +1506,7 @@
         "id": "JP8UeZx-2kVU",
         "outputId": "0d4890ec-5240-4a87-b8d9-62f2c7f6d2f5"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1582,7 +1571,7 @@
         "id": "mfBIMtLU2UAo",
         "outputId": "d49f823e-f476-45a0-cbc6-a08f244f9575"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1632,7 +1621,7 @@
         "id": "r1JEjJxC2Q88",
         "outputId": "6363e5f2-8133-4c9e-e298-e2d3043ece09"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1663,7 +1652,7 @@
         "id": "4dcgwlyV2VGI",
         "outputId": "aeb1479f-1916-4bef-b8e4-cbc9cede83da"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1715,7 +1704,7 @@
         "id": "LEcDYFcY2XG-",
         "outputId": "18f5cf0d-a5cb-41b3-aab9-397e55988722"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1764,7 +1753,7 @@
         "id": "auPVc17h3xos",
         "outputId": "98a9ebfa-7750-45ad-e78f-4d33978f0ec3"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1811,8 +1800,8 @@
         "  algorithm = \"backprop\",\n",
         "  threshold = 0.01,\n",
         "  learningrate = 0.001,\n",
-        "  rep = 5\n",
-        ")"
+        "  rep = 100\n",
+        ")\n"
       ],
       "metadata": {
         "id": "vmcjb4zX25Oq"
@@ -1835,31 +1824,10 @@
         "print(ErrorC_RNA)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 280
-        },
-        "id": "ThAhE_a73s2Z",
-        "outputId": "c5a6da1f-fa16-46db-ae52-1eafff130074"
+        "id": "ThAhE_a73s2Z"
       },
-      "execution_count": 108,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ERROR",
-          "evalue": "ignored",
-          "traceback": [
-            "Error in data.frame(wts, row_nms): arguments imply differing number of rows: 0, 28\nTraceback:\n",
-            "1. plotnet(red, rep = \"best\")",
-            "2. plotnet.nn(red, rep = \"best\")",
-            "3. plotnet.default(mod_in, x_names = x_names, y_names = y_names, \n .     skip = FALSE, ...)",
-            "4. neuralweights(mod_in, struct = struct)",
-            "5. neuralweights.nn(mod_in, struct = struct)",
-            "6. data.frame(wts, row_nms)",
-            "7. stop(gettextf(\"arguments imply differing number of rows: %s\", \n .     paste(unique(nrows), collapse = \", \")), domain = NA)"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
